# vpl

./: CMakeLists.txt  README.md  main.cpp  vpl.kdev4
.kdev4/: vpl.kdev4
apps/: .read_octree.cpp.kate-swp  .training_main.cpp.kate-swp  CMakeLists.txt  octo2file_in_folders.cpp  read_octree.cpp  test_DNN.cpp  test_DNN_regression.cpp  test_freeflyer_vasquez09.cpp  test_ram.cpp  test_trainer.cpp  training_main.cpp  trainning_main_changes.cpp
doc/html/: INIReader_8h_source.html  annotated.html  classCOctreeKriegel12-members.html  classCOctreeKriegel12.html  classCOctreeOccussionAware-members.html  classCOctreeOccussionAware.html  classCOctreeRearSideVoxel-members.html  classCOctreeRearSideVoxel.html  classCOctreeVPL-members.html  classCOctreeVPL.html  classEvaluationResult-members.html  classEvaluationResult.html  classEvaluationResultVector-members.html  classEvaluationResultVector.html  classINIReader-members.html  classINIReader.html  classNBVPlanner-members.html  classNBVPlanner.html  classPMVORearSideVoxel-members.html  classPMVORearSideVoxel.html  (+95 more)
partialmodel/: partialmodelbase.cpp  partialmodelbase.h  pmvoctree.cpp  pmvoctree.h  pmvoctreevasquez09.h  pmvolumetric.cpp  pmvolumetric.h
pcl/: CMakeLists.txt  icp_narf_one_file_output.cpp  icp_narg.cpp  icp_narg.h
pcl/ICP_NARF/: ICP_NARF.kdev4  icp_narf_one_file_output.cpp  icp_narg.cpp
pcl/ICP_NARF/.kdev4/: ICP_NARF.kdev4
pre-processing/: cloud_generation.py  escala_de_nubes.py  scaling.py
viewplanning/: CMakeLists.txt  training_planner.cpp  training_planner.cppr16010.new  training_planner.h
(+149 files in other folders)
